--- a/css/all.css
+++ b/css/all.css
@@ -35,7 +35,8 @@ pre{
     /* position: fixed; */
     /* height: 60px; */
     /* width: 100%; */
-    background-image: url(../img/www/banner-head.jpg);
+    /*background-image: url(../img/www/banner-head.jpg);*/
+    background-image:linear-gradient(141deg,#9fb8ad 0%,#1fc8db 51%,#2cb5e8 75%);
     /* background-image: url(../img/www/top-backgroup.jpg); */
     background-position: center;
     height: 100px;
