--- a/css/all.css
+++ b/css/all.css
@@ -36,7 +36,8 @@ pre{
     /* height: 60px; */
     /* width: 100%; */
     /*background-image: url(../img/www/banner-head.jpg);*/
-    background-image:linear-gradient(141deg,#9fb8ad 0%,#1fc8db 51%,#2cb5e8 75%);
+    /*background-image:linear-gradient(141deg,#9fb8ad 0%,#1fc8db 51%,#2cb5e8 75%);*/
+    background: linear-gradient(100deg,#3cd5ff,#007aff);
     /* background-image: url(../img/www/top-backgroup.jpg); */
     background-position: center;
     height: 100px;
